Minor style and merge fixes.

--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -515,7 +515,7 @@ div.dialog-content {
 .genres {
   display: flex;
   flex-wrap: wrap;
-  margin: 5px 0 5px;
+  margin: 0 0 5px 9px;
 
   .genre {
     background-image: linear-gradient(225deg, #eecafd 0%, #64d3e3 100%);
