--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -70,6 +70,11 @@ button {
     color: #616060;
   }
 
+  .edit-button {
+    padding: 0;
+    min-width: 30px;
+  }
+
   .poll-description {
     margin: -10px 0 24px 0;
     color: #616060;
