--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -60,7 +60,7 @@
 
   .poster-container {
     position: relative;
-    // top: -24px;
+    top: -14px;
     left: -34px;
     margin-right: -12px;
   }
@@ -69,13 +69,12 @@
     line-height: 1.2em;
     margin-bottom: 7px;
     font-size: 1.2em;
-    padding-bottom: 5px;
     flex: 1;
   }
 
   .original-title {
-    line-height: 1.25em;
-    margin-top: 2px;
+    line-height: 1.15em;
+    margin-top: 0 0 2px;
     font-size: 0.65em;
     line-height: 1.25em;
     font-weight: 500;
@@ -87,6 +86,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    user-select: none;
   }
 
   .extra-info {
@@ -222,7 +222,6 @@
   }
 
   .show-more {
-    align-self: flex-end;
     margin-top: auto;
   }
 
@@ -625,6 +624,8 @@
     .show-more {
       --mdc-text-button-label-text-size: 8px;
       --mdc-text-button-container-height: 18px;
+      margin-right: -15px;
+      align-self: flex-end;
     }
 
     .creator {
@@ -700,4 +701,9 @@
   .order-number {
     filter: drop-shadow(0px 0px 1px #000);
   }
+}
+
+.draggable {
+  background: repeating-linear-gradient( 45deg, #f1f1f5, #f1f1f5 10px, #d9c6eebf 10px, #d9c6eebf 20px );
+  border: 2px dashed #868389;
 }
