--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -43,7 +43,7 @@ false);
             class="toggle-drag"
             (change)="$event.checked ? sortType$.next('ranked') : void"
             [(ngModel)]="draggable"
-            >Sort items by drag</mat-slide-toggle
+            >Sort items by dragging</mat-slide-toggle
           >
           } }
           <div [class.show]="poll.selectMultiple" class="vote-multiple">
