--- a/src/styles.scss
+++ b/src/styles.scss
@@ -918,7 +918,8 @@ html {
 }
 
 .mat-bottom-sheet-container {
-  max-width: calc(100vw - 2 * 24px) !important;
-  min-width: unset !important;
+  max-width: min(90%, 450px) !important; // same as dialog
+  min-width: min(90%, 450px) !important;
   border-radius: 20px 20px 0 0;
+  margin: 0 auto;
 }
