--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -14,6 +14,10 @@ userService.isCurrentUser(poll?.owner) : false);
             <i class="fa-regular fa-calendar"></i>
             {{ poll.date?.toDate() | date : "d/M/YYYY" }}
           </div>
+          } @if (poll.description) {
+          <div class="poll-description">
+            {{ poll.description }}
+          </div>
           } @if (pollOwner) {
           <div class="allow-random-draw">
             <label
